# rust-promethus-remote-write-demo

./: Cargo.toml
src/: main.rs
src/server/: handler.rs  mod.rs  server.rs  state.rs  ts.rs
src/server/protos/: gogo.rs  mod.rs  remote.rs  types.rs
tests/: proto.rs
