[package]
name = "downsample_producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concat-string = "1.0.1"
protobuf = "2.27.1"
actix-web = "4"
flume = "0.10.12"
snap = "^1.0.5"
log = "0.4.0"
env_logger = "0.9.0"
unsigned-varint = "0.7.1"
futures = "0.3.21"
rayon = "1.5.1"